使用 Colab 创建而成

--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iH69b30hjfyp"
+        "id": "-kA_Zofe4653"
       },
       "source": [
         "## 10-714: Homework 0\n",
@@ -19,11 +19,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "EwPbylTDjfyr"
+        "id": "hbiSyasu4655",
+        "outputId": "99f2a56c-230c-4379-e94b-e77fbe304ef8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "/content/drive/MyDrive\n",
+            "/content/drive/MyDrive/10714\n",
+            "fatal: destination path 'hw0' already exists and is not an empty directory.\n",
+            "/content/drive/MyDrive/10714/hw0\n"
+          ]
+        }
+      ],
       "source": [
         "# Code to set up the assignment\n",
         "from google.colab import drive\n",
@@ -31,14 +47,14 @@
         "%cd /content/drive/MyDrive/\n",
         "!mkdir -p 10714\n",
         "%cd /content/drive/MyDrive/10714\n",
-        "!git https://github.com/XuhaoZhao/dlsyscourse-hw0.git\n",
+        "!git clone https://github.com/dlsyscourse/hw0.git\n",
         "%cd /content/drive/MyDrive/10714/hw0"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fcN-aSR5jfys"
+        "id": "TTq88KyA4655"
       },
       "source": [
         "This next cell will then install the libraries required."
@@ -48,7 +64,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "cbbVsDerjfys"
+        "id": "K1X2U04O4655"
       },
       "outputs": [],
       "source": [
@@ -60,7 +76,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Tbi2OTM-jfys"
+        "id": "RHcEa7bw4655"
       },
       "source": [
         "## Question 1: A basic `add` function, and testing/autograding basics\n",
@@ -125,7 +141,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bSurIdFPjfyt"
+        "id": "74omCE1G4656"
       },
       "source": [
         "### Running local tests\n",
@@ -137,8 +153,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "m5o9L5A8jfyt",
-        "outputId": "5210b61d-4115-4059-b8c8-8b5bc5a3b2e7"
+        "id": "yYyXwJp04656",
+        "outputId": "d00d9bf9-d553-48a2-95d5-9230ae4845f4"
       },
       "outputs": [
         {
@@ -164,7 +180,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1scSxEZJjfyt"
+        "id": "zUnvXAw-4656"
       },
       "source": [
         "If all goes correctly, you will see that one tests is passed correctly.  To see how this test works, take a look at the `tests/test_simple_ml.py` file, specifically the `test_add()` function:\n",
@@ -185,8 +201,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "cYCaU5Csjfyu",
-        "outputId": "90ceb286-0ed7-485b-a982-66e6c4b55961"
+        "id": "WelP3QWA4657",
+        "outputId": "dee9b33d-566b-4476-e60b-ad3ade04f886"
       },
       "outputs": [
         {
@@ -222,7 +238,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sqYysyRFjfyu"
+        "id": "OGEv-6tZ4657"
       },
       "source": [
         "As you can see, you will get an error that indicates the line where the assertion failed, which you can then use to go back and debug your implementation.  **You should get comfortabale with reading and tracing through the tests file as a way of better understanding how your implementations should work.**\n",
@@ -235,7 +251,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "H4bSSCmajfyu"
+        "id": "OdiS7f1O4657"
       },
       "source": [
         "### Submitting to the autograder\n",
@@ -249,7 +265,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jKiqLelujfyu"
+        "id": "yu63LAl34657"
       },
       "outputs": [],
       "source": [
@@ -259,7 +275,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Q2Qdelyrjfyu"
+        "id": "5TKK2C_84657"
       },
       "source": [
         "Running this command will submit your `add` function to the mugrade autograding system.  To see how this works internally, take a look at the `tests/test_simply_ml.py` file again, but this time the `submit_add()` function right below the `test_add` function.\n",
@@ -285,7 +301,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YYPlYq0pjfyu"
+        "id": "_xlWleGw4657"
       },
       "source": [
         "## Question 2: Loading MNIST data\n",
@@ -330,7 +346,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "qBlKNW2Tjfyv"
+        "id": "1nVVaS4h4658"
       },
       "outputs": [],
       "source": [
@@ -340,7 +356,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "17rxm8dAjfyv"
+        "id": "oIBsX9M14658"
       },
       "source": [
         "And then submit your code to mugrade."
@@ -350,7 +366,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "h6Zrx2A0jfyv"
+        "id": "hs0SPM9f4658"
       },
       "outputs": [],
       "source": [
@@ -360,7 +376,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "w5ut4eZ5jfyv"
+        "id": "CXuhM3gZ4658"
       },
       "source": [
         "## Question 3: Softmax loss\n",
@@ -379,7 +395,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "zAMRalN9jfyv"
+        "id": "iBS_hYtC4658"
       },
       "outputs": [],
       "source": [
@@ -389,7 +405,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "z-g8Vvrujfyv"
+        "id": "1q9xtxLO4658"
       },
       "source": [
         "Then run the submission."
@@ -399,7 +415,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OmeF-84pjfyv"
+        "id": "FK9UCnbE4658"
       },
       "outputs": [],
       "source": [
@@ -409,7 +425,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1YjRhYN5jfyv"
+        "id": "dVek3PCG4658"
       },
       "source": [
         "## Question 4: Stochastic gradient descent for softmax regression\n",
@@ -452,7 +468,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "cnHn4Macjfyv"
+        "id": "DzzLYfvC4658"
       },
       "outputs": [],
       "source": [
@@ -462,7 +478,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Io36VpP3jfyw"
+        "id": "atZzv4_I4659"
       },
       "source": [
         "And then run the submission."
@@ -472,7 +488,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ufVp1AUPjfyw"
+        "id": "0YnCq0rp4659"
       },
       "outputs": [],
       "source": [
@@ -482,7 +498,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ESvp67P3jfyw"
+        "id": "kbm4Wz044659"
       },
       "source": [
         "### Training MNIST with softmax regression\n",
@@ -496,8 +512,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "W13JPaptjfyw",
-        "outputId": "d6ed2e59-ae15-4b45-acf6-b5eb41d154b3"
+        "id": "eaiUYT6Y4659",
+        "outputId": "95c40418-4973-40ba-b8d9-e84d85c3a568"
       },
       "outputs": [
         {
@@ -534,7 +550,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8t7n-F6sjfyw"
+        "id": "rh_kJN2v4659"
       },
       "source": [
         "## Question 5: SGD for a two-layer neural network\n",
@@ -577,7 +593,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "nyIqP54kjfyw"
+        "id": "FzsqTPIc4659"
       },
       "outputs": [],
       "source": [
@@ -587,7 +603,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "f1QFbjf0jfyw"
+        "id": "JGd0SFXG4659"
       },
       "source": [
         "And finally submit for autograding."
@@ -597,7 +613,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "beMwJzLmjfyw"
+        "id": "6_4wBcPO4659"
       },
       "outputs": [],
       "source": [
@@ -607,7 +623,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6uiNe8Y6jfyw"
+        "id": "P2G7mUF-4659"
       },
       "source": [
         "### Training a full neural network\n",
@@ -619,8 +635,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2hGjK8xijfyx",
-        "outputId": "49216567-0fa6-4d27-e84b-c9879297ac0c"
+        "id": "7itn6_YN4659",
+        "outputId": "41a8d5d1-71e8-44ed-d045-49dbb6c49377"
       },
       "outputs": [
         {
@@ -672,7 +688,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ATbaZna4jfyx"
+        "id": "mnnd5VRy465-"
       },
       "source": [
         "This takes about 30 seconds to run on Colab for our implementation, and as seen above, it achieve an error of 1.89\\% on MNIST.  Not bad for less than 20 lines of code or so..."
@@ -681,7 +697,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qnWFOXYHjfyx"
+        "id": "eJwsarGi465-"
       },
       "source": [
         "## Question 6: Softmax regression in C++\n",
@@ -768,8 +784,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "htscWInNjfyx",
-        "outputId": "c9451bd4-9e10-47ab-e23c-381a700b7948"
+        "id": "k-2D8wd7465-",
+        "outputId": "86ab0245-2e48-4e01-ac3f-8e46086b1c8a"
       },
       "outputs": [
         {
@@ -797,7 +813,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Mh2ko6fPjfyx"
+        "id": "_V8xCjBj465-"
       },
       "source": [
         "Note that unlike our code before, we had to actually compile the C++ extension in order to run an test it.  This will be needed whenever there are C++ components of your code, but in all such cases we will include Makefiles that should compile all the relevant functions and include the necessary libraries/headers.  And finally, let's also submit the results to mugrade."
@@ -807,7 +823,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "BabGp62Qjfyx"
+        "id": "DPuiZD8C465-"
       },
       "outputs": [],
       "source": [
@@ -817,7 +833,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VyYYYIq8jfyx"
+        "id": "kwtiga9h465-"
       },
       "source": [
         "### Training a full softmax regression classifier with the C++ version\n",
@@ -829,8 +845,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GL5ZznDRjfyy",
-        "outputId": "fc7f8087-d11e-4e2b-af4d-7d3a569c13b5"
+        "id": "wiUJYGxx466G",
+        "outputId": "7fc909d4-d648-495a-8869-3aa7fd5b28c0"
       },
       "outputs": [
         {
@@ -873,7 +889,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "irGjScJyjfyy"
+        "id": "nzJrwn_a466G"
       },
       "source": [
         "As expected, the numbers match exactly our Python version, and the code is ... about 5 times slower?!  What is going on here?  Well, it turns out that the \"manual\" matrix multiplication code you probably wrote for the C++ version is extremely inefficient.  While Python itself is a slow, interpreted language, numpy itself is backed by matrix multiplications written in C (or, more likely, Fortran, believe it or not), that have been highly optmized to make use of vector operations, the cache hierarchy of different processors, and other features that are essential for efficient numerical operations.  We will cover these details much more in later lectures, and you'll even write a matrix library that can actually perform these operations relatively efficiently (at least for some special cases ... it's honestly not that easy to beat numpy in general).\n",
